year4/#sem2/IDP/project/configs/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    konghq.com/strip-path: "false"  # Do not strip the /prometheus prefix
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
